src-ken&y/objects/Inventory_Transaction__c.object
<CustomObject>
    <customHelpPage>HelpInventoryTransaction</customHelpPage>
    <description>This object records the movements of items caused by WIP and inventory transactions</description>
    <fields>
        <fullName>ASN_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASN Line</label>
        <referenceTo>ASN_Line__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Accounted flag is set to true when the accounting entries for record are completed</description>
        <label>Accounted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assembly_Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assembly Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Inventory Transactions (Assembly Packaging UOM)</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bin of the ToSkid.</description>
        <label>Bin</label>
        <referenceTo>Bin__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Book_Value_of_Related_Fixed_Asset__c</fullName>
        <label>Book Value of Related Fixed Asset</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consigned_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>owner of the consigned goods.</description>
        <label>Consigned Owner</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Inventory Transactions (Container Item)</relationshipLabel>
        <relationshipName>Container_Item_Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>the date this inventory is received on.</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date of the ToSkid.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extended_Cost__c</fullName>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finalized Flag is set to true when the record is ready for accounting</description>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The bin, the item used to belong to.</description>
        <label>From Bin</label>
        <referenceTo>Bin__c</referenceTo>
        <relationshipLabel>Inventory Transactions (From Bin)</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Container_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Container Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Inventory Transactions (From Container Item)</relationshipLabel>
        <relationshipName>Inventory_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the facility from which this quantity is being moved.</description>
        <label>From Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_License_Plate_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From License Plate Number</label>
        <referenceTo>LPN__c</referenceTo>
        <relationshipLabel>Inventory Transactions (From License Plate Number)</relationshipLabel>
        <relationshipName>Inventory_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to From Location</description>
        <label>From Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lot number the item used to be.</description>
        <label>From Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Inventory Transactions (From Lot)</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Inventory Transactions (From Packaging UOM)</relationshipLabel>
        <relationshipName>PackagingUOM_Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_SKID_Identifier__c</fullName>
        <label>From SKID Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_SKID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SKID inventory came from</description>
        <label>From SKID</label>
        <referenceTo>SKID__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Standard_Cost__c</fullName>
        <label>From Standard Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>Inventory_Change__r.Historical__c || Work_Order__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to inventory change record</description>
        <label>Inventory Change</label>
        <referenceTo>Inventory_Change__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item used in this transaction</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Plate_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Plate Number</label>
        <referenceTo>LPN__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Increase</fullName>
                </value>
                <value>
                    <fullName>Decrease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lot of the ToSkid.</description>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Id__c</fullName>
        <description>external id field to be used in the process of creating serial transactions.</description>
        <externalId>true</externalId>
        <inlineHelpText>Please do not add this field to the layout.</inlineHelpText>
        <label>Master Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Tracking</label>
        <referenceTo>Material_Tracking__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mixed_Palletized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mixed Palletized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Quantity__c</fullName>
        <description>Change in Quantity on Hand</description>
        <formula>IF(
		OR(
			ISPICKVAL(Type__c, &quot;Adjustment Decrease&quot;),
			ISPICKVAL(Type__c, &quot;Adjustment Increase&quot;),
			ISPICKVAL(Type__c, &quot;Cycle Count&quot;),
			ISPICKVAL(Type__c, &quot;Purchase Order Receipt&quot;),
			ISPICKVAL(Type__c, &quot;Logical Purchase Order Receipt&quot;),
	        ISPICKVAL( Type__c, &quot;RMA Receipt&quot;),
                ISPICKVAL( Type__c, &quot;RMA Scrap&quot;),
	        ISPICKVAL( Type__c, &quot;RMA Receipt For Repair&quot;),
            ISPICKVAL( Type__c, &quot;Logical RMA Receipt&quot;), 
			ISPICKVAL(Type__c, &quot;Transfer Order Receipt&quot;),
			ISPICKVAL(Type__c, &quot;QA Sample&quot;),
			ISPICKVAL(Type__c, &quot;Sales Order Undo Shipment&quot;),
            ISPICKVAL(Type__c, &quot;Logical Sales Order Undo Shipment&quot;),
			ISPICKVAL(Type__c, &quot;Transfer Order Undo Shipment&quot;),
			ISPICKVAL(Type__c, &quot;Work Order Assembly Completion&quot;),
			ISPICKVAL(Type__c, &quot;Work Order Assembly Scrap&quot;),
			ISPICKVAL(Type__c, &quot;Work Order Repair Assembly Completion&quot;),
			ISPICKVAL(Type__c, &quot;Work Order Repair Assembly Scrap&quot;),
			ISPICKVAL(Type__c, &quot;Work Order Return To WIP&quot;),
			ISPICKVAL(Type__c, &quot;Work Order Repair Return To WIP&quot;),
			ISPICKVAL(Type__c, &quot;By-product&quot;),
			ISPICKVAL(Type__c, &quot;Void - Purchase Order Return&quot;),
            ISPICKVAL(Type__c, &quot;Void - Logical Purchase Order Return&quot;),
			ISPICKVAL(Type__c, &quot;Miscellaneous Receipt&quot;), 
			ISPICKVAL(Type__c, &quot;Return Receipt&quot;),
			ISPICKVAL(Type__c, &quot;Transfer Receipt&quot;)
		),
		Quantity_Stocking_UOM__c,
		IF(
			OR(
				ISPICKVAL(Type__c, &quot;Work Order Issue From WIP&quot;),
				ISPICKVAL(Type__c, &quot;Work Order Repair Issue From WIP&quot;),
				ISPICKVAL(Type__c, &quot;Sales Order Shipment&quot;),
				ISPICKVAL(Type__c, &quot;Logical Sales Order Shipment&quot;),
				ISPICKVAL(Type__c, &quot;Transfer Order Shipment&quot;),
				ISPICKVAL(Type__c, &quot;Work Order Assembly Uncompletion&quot;),
				ISPICKVAL(Type__c, &quot;Work Order Repair Assembly Uncompletion&quot;),
				ISPICKVAL(Type__c, &quot;By-product Uncompletion&quot;),
				ISPICKVAL(Type__c, &quot;Void - Transfer Order Receipt&quot;),
				ISPICKVAL(Type__c, &quot;Void - Purchase Order Receipt&quot;),
				ISPICKVAL(Type__c, &quot;Void - In-Transit Purchase Order Receipt&quot;),
                ISPICKVAL(Type__c, &quot;Void - Logical Purchase Order Receipt&quot;),
                ISPICKVAL(Type__c, &quot;Void - RMA Receipt&quot;),
                ISPICKVAL(Type__c, &quot;Void - RMA Receipt For Repair&quot;),
                ISPICKVAL(Type__c, &quot;Void - Logical RMA Receipt&quot;),
				ISPICKVAL(Type__c, &quot;Void - Miscellaneous Receipt&quot;),
				ISPICKVAL(Type__c, &quot;Void - Return Receipt&quot;),
				ISPICKVAL(Type__c, &quot;Purchase Order Return&quot;),
				ISPICKVAL( Type__c, &quot;Logical Purchase Order Return&quot;),
				ISPICKVAL( Type__c, &quot;Transfer Shipment&quot;)
			),
			-Quantity_Stocking_UOM__c,
			0.0
		)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation Tracking</label>
        <referenceTo>Operation_Tracking__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>Order_Line__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Inventory Transactions (To Packaging UOM)</relationshipLabel>
        <relationshipName>Inventory_Transactions_To_PackagingUOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Purchase Order Line</description>
        <label>Purchase Order Line</label>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Stocking_UOM__c</fullName>
        <description>Quantity represented in Stocking UOM</description>
        <label>Quantity (Stocking UOM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Transaction quantity</description>
        <label>Quantity (Packaging UOM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Receipt_Line</description>
        <label>Receipt Line</label>
        <referenceTo>Receipt_Line__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this transaction has been reversed by another transaction. This applies to transactions of type &apos;Sales Order Pick&apos; and &apos;Sales Order Allocation&apos; so that they cannot be packed.</description>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Sales Order Line</description>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Shipment Line</description>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <description>Standard cost of the item when the transaction occured</description>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stocking_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stocking UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>StockingUOM_Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the facility to which this quantity is being moved.</description>
        <label>To Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Inventory Transactions (To Facility)</relationshipLabel>
        <relationshipName>Inventory_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to To Location</description>
        <label>To Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Inventory Transactions (To Location)</relationshipLabel>
        <relationshipName>Inventory_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_SKID_Identifier__c</fullName>
        <label>To SKID Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_SKID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SKID inventory was moved to</description>
        <label>To SKID</label>
        <referenceTo>SKID__c</referenceTo>
        <relationshipLabel>Inventory Transactions (To SKID)</relationshipLabel>
        <relationshipName>Inventory_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Standard_Cost__c</fullName>
        <label>To Standard Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date transaction occured</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Unit_Cost__c</fullName>
        <label>Transaction Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The reason this transaction occured</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Activate Proposed Costs</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Sales Order Allocation</fullName>
                </value>
                <value>
                    <fullName>Sales Order Pick</fullName>
                </value>
                <value>
                    <fullName>Transfer Order Allocation</fullName>
                </value>
                <value>
                    <fullName>Transfer Order Pick</fullName>
                </value>
                <value>
                    <fullName>Adjustment Decrease</fullName>
                </value>
                <value>
                    <fullName>Adjustment Increase</fullName>
                </value>
                <value>
                    <fullName>Cycle Count</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Receipt</fullName>
                </value>
                <value>
                    <fullName>Transfer Order Receipt</fullName>
                </value>
                <value>
                    <fullName>QA Sample</fullName>
                </value>
                <value>
                    <fullName>Sales Order Undo Shipment</fullName>
                </value>
                <value>
                    <fullName>Work Order Assembly Completion</fullName>
                </value>
                <value>
                    <fullName>Work Order Assembly Scrap</fullName>
                </value>
                <value>
                    <fullName>Work Order Component Return</fullName>
                </value>
                <value>
                    <fullName>Work Order Component Scrap</fullName>
                </value>
                <value>
                    <fullName>Work Order Return To WIP</fullName>
                </value>
                <value>
                    <fullName>Work Order Issue From WIP</fullName>
                </value>
                <value>
                    <fullName>By-product</fullName>
                </value>
                <value>
                    <fullName>Work Order Component Issue</fullName>
                </value>
                <value>
                    <fullName>Sales Order Shipment</fullName>
                </value>
                <value>
                    <fullName>Transfer Order Shipment</fullName>
                </value>
                <value>
                    <fullName>Work Order Assembly Uncompletion</fullName>
                </value>
                <value>
                    <fullName>By-product Uncompletion</fullName>
                </value>
                <value>
                    <fullName>Void - Transfer Order Receipt</fullName>
                </value>
                <value>
                    <fullName>Void - Purchase Order Receipt</fullName>
                </value>
                <value>
                    <fullName>Transfer Order Undo Shipment</fullName>
                </value>
                <value>
                    <fullName>Transfer Order Unallocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Order if this is a work order transaction</description>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isFinalized__c</fullName>
        <formula>Work_Order__r.Finalized__c || Inventory_Change__r.Finalized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <label>Inventory Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Quantity__c</columns>
        <columns>Type__c</columns>
        <columns>Net_Quantity__c</columns>
        <columns>From_SKID__c</columns>
        <columns>To_SKID__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Finalized__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Transaction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company_must_be_populated</fullName>
        <active>true</active>
        <description>Company must be populated on the skid</description>
        <errorConditionFormula>ISBLANK(Company__c) || ISNULL(Company__c)</errorConditionFormula>
        <errorDisplayField>Company__c</errorDisplayField>
        <errorMessage>Company value must be populated.</errorMessage>
    </validationRules>
</CustomObject>